kubernetes/apps/observability/signoz/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: signoz
spec:
  hostnames:
    - signoz.hayden.moe
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - name: signoz
          namespace: observability
          port: 8080
